# TP9_Cloth

./: CMakeLists.txt  README.md
Part1_Spring/: CMakeLists.txt
Part1_Spring/src/lib/mesh/: mesh_io.cpp
Part1_Spring/src/lib/opengl/: glutils.cpp  line_opengl.cpp
Part1_Spring/src/local/scene/: scene.cpp  scene.hpp
Part2_Cloth/: CMakeLists.txt
Part2_Cloth/src/cloth/: mesh_parametric_cloth.cpp  mesh_parametric_cloth.hpp
Part2_Cloth/src/lib/mesh/: mesh_io.cpp
Part2_Cloth/src/lib/opengl/: glutils.cpp
Part2_Cloth/src/local/scene/: scene.cpp
